# transaction-classifier

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  clients.yaml.example  pyproject.toml
.github/workflows/: test.yml
config/profiles/: french_treasury.yaml
data/: sample.csv
docker/: Dockerfile.serve  Dockerfile.train  docker-compose.yml  nginx.conf
docs/: DESIGN.md
reports/: metrics.json  model_comparison.json
scripts/: compare_models.py  deploy_model.sh  evaluate_model.py  generate_sample_data.py  retrain.sh
src/transaction_classifier/: __init__.py
src/transaction_classifier/core/: config.py
src/transaction_classifier/core/artifacts/: schema.py  store.py
src/transaction_classifier/core/data/: loader.py  preprocessor.py  registry.py  source.py  splitter.py
src/transaction_classifier/core/evaluation/: metrics.py
src/transaction_classifier/core/features/: engine.py  pipeline.py  standard.py  text.py
src/transaction_classifier/core/models/: base.py  xgboost_model.py
src/transaction_classifier/core/utils/: logging.py  reproducibility.py
src/transaction_classifier/evaluation/: visualize.py
src/transaction_classifier/inference/: app.py  auth.py  cli.py  middleware.py  predictor.py  schemas.py
src/transaction_classifier/inference/routes/: classify.py  explain.py  health.py  ops.py
src/transaction_classifier/training/: cli.py  pipeline.py  validator.py
src/transaction_classifier/training/hpo/: __init__.py  cli.py  objective.py  report.py  search_space.py
tests/: conftest.py
tests/fixtures/: sample_10rows.csv
tests/integration/: test_api.py  test_pipeline.py  test_watcher.py
tests/unit/: test_artifacts.py  test_auth.py  test_cli.py  test_engine.py  test_explain.py  test_explain_schemas.py  test_features.py  test_hpo.py  test_hpo_cli.py  test_hpo_objective.py  test_hpo_report.py  test_inference_app.py  test_inference_cli.py  test_loader.py  test_middleware.py  test_ops.py  test_predictor.py  test_preprocessor.py  test_registry.py  test_sandbox.py  test_schemas.py  test_source.py  test_standard_features.py  test_training_cli_extended.py  test_validator.py  test_visualize.py
